<resources>
    <string name="app_name">Quiz Application</string>
    <string name="title_activity_floating">FloatingActivity</string>
    <string name="phy_q1">The absorption of ink by blotting paper involves</string>
    <string name="phy_q1_o1">viscosity of ink</string>
    <string name="phy_q1_o2">capillary action phenomenon</string>
    <string name="phy_q1_o3">diffusion of ink through the blotting</string>
    <string name="phy_q1_o4">siphon action</string>
    <string name="phy_q2">Light year is a unit of</string>
    <string name="phy_q2_o1">time</string>
    <string name="phy_q2_o2">distance</string>
    <string name="phy_q2_o3">light</string>
    <string name="phy_q2_o4">intensity of light</string>
    <string name="phy_q3">Which physical quantities have the same dimensions?</string>
    <string name="phy_q3_o1">Distance</string>
    <string name="phy_q3_o2">Displacement</string>
    <string name="phy_q3_o3">Amplitude</string>
    <string name="phy_q3_o4">Young\'s Modulus</string>
    <string name="phy_q4">Who is this scientist?</string>
    <string name="phy_q5">Stars which appear single to the naked eye but are double when seen through a telescope are</string>
    <string name="phy_q5_o1">novas and supernovas</string>
    <string name="phy_q5_o2">binaries</string>
    <string name="phy_q5_o3">asteroids</string>
    <string name="phy_q5_o4">quasars</string>
    <string name="phy_q6">Sir C.V. Raman was awarded Nobel Prize for his work connected with which of the following phenomenon of radiation?</string>
    <string name="phy_q7">Of the four locations mentioned below the highest inside temperature will be attained in the pressure cooker operated with the pressure valve open</string>
    <string name="phy_q7_o1">at sea level</string>
    <string name="phy_q7_o2">at the top of Mt. Everest</string>
    <string name="phy_q7_o3">at a place in a valley below sea level</string>
    <string name="phy_q7_o4">in an aeroplane flying at a height of 10,000 m with inside pressure maintained at the sea level</string>
    <string name="phy_q8">What is the full form of SONAR?</string>
    <string name="phy_q9">Supersonic plane fly with the speed</string>
    <string name="phy_q9_o1">less than the speed of sound</string>
    <string name="phy_q9_o2">of sound</string>
    <string name="phy_q9_o3">greater than the speed of sound</string>
    <string name="phy_q9_o4">of light</string>
    <string name="phy_q10">Rainbow is due to</string>
    <string name="phy_q10_o1">absorption of sunlight in minute water droplets</string>
    <string name="phy_q10_o2">diffusion of sunlight through water droplets</string>
    <string name="phy_q10_o3">ionisation of water deposits</string>
    <string name="phy_q10_o4">refraction and reflection of sunlight by water droplets</string>
    <string name="chem_q1">The most commonly used bleaching agent is</string>
    <string name="chem_q1_o1">alcohol</string>
    <string name="chem_q1_o2">carbon dioxide</string>
    <string name="chem_q1_o3">chlorine</string>
    <string name="chem_q1_o4">sodium chlorine</string>
    <string name="chem_q2">The main use of salt in the diet is to</string>
    <string name="chem_q2_o1">make the taste of food better</string>
    <string name="chem_q2_o2">produce in small amounts the hydrochloric acid required for the digestion of food</string>
    <string name="chem_q2_o3">ease the process of cooking</string>
    <string name="chem_q2_o4">increase the solubility of food particles in water</string>
    <string name="chem_q3">What are the allotropes of Carbon?</string>
    <string name="chem_q3_o1">Diamond</string>
    <string name="chem_q3_o2">Graphite</string>
    <string name="chem_q3_o3">Lonsdaleite</string>
    <string name="chem_q3_o4">Buckminsterfullerene</string>
    <string name="chem_q4">Who formulated the Periodic Law?</string>
    <string name="chem_q5">Unique properties of carbon are</string>
    <string name="chem_q5_o1">catenation</string>
    <string name="chem_q5_o2">has 4 valence electrons</string>
    <string name="chem_q5_o3">has 2 isotopes</string>
    <string name="chem_q5_o4">none of these</string>
    <string name="chem_q6">The most malleable metal is</string>
    <string name="chem_q7">The high reactivity of fluorine is due to</string>
    <string name="chem_q7_o1">its high electro negativity</string>
    <string name="chem_q7_o2">small size of fluorine atom</string>
    <string name="chem_q7_o3">availability of d-orbitals</string>
    <string name="chem_q7_o4">strong F - F bond</string>
    <string name="chem_q8">The gas used for artificial ripening of green fruit is</string>
    <string name="chem_q9">The mineral containing both magnesium and calcium is</string>
    <string name="chem_q9_o1">magnesite</string>
    <string name="chem_q9_o2">calcite</string>
    <string name="chem_q9_o3">carnallite</string>
    <string name="chem_q9_o4">dolomite</string>
    <string name="chem_q10">The hottest part of the gas flame is known as</string>
    <string name="chem_q10_o1">luminous zone</string>
    <string name="chem_q10_o2">dark zone</string>
    <string name="chem_q10_o3">blue zone</string>
    <string name="chem_q10_o4">non-luminous zone</string>
    <string name="bio_q1">Ordinary table salt is sodium chloride. What is baking soda?</string>
    <string name="bio_q1_o1">Potassium chloride</string>
    <string name="bio_q1_o2">Potassium carbonate</string>
    <string name="bio_q1_o3">Potassium hydroxide</string>
    <string name="bio_q1_o4">Sodium bicarbonate</string>
    <string name="bio_q2">Movement of cell against concentration gradient is called</string>
    <string name="bio_q2_o1">osmosis</string>
    <string name="bio_q2_o2">active transport</string>
    <string name="bio_q2_o3">diffusion</string>
    <string name="bio_q2_o4">passive transport</string>
    <string name="bio_q3">Most fish do not sink in water because of the presence of</string>
    <string name="bio_q3_o1">swim bladder</string>
    <string name="bio_q3_o2">air bladder</string>
    <string name="bio_q3_o3">air sacs</string>
    <string name="bio_q3_o4">air in spongy bones</string>
    <string name="bio_q4">Full form of DNA is</string>
    <string name="bio_q5">Prokaryotic cells lack</string>
    <string name="bio_q5_o1">nucleolus</string>
    <string name="bio_q5_o2">nuclear membrane</string>
    <string name="bio_q5_o3">membrane bound by organelles</string>
    <string name="bio_q5_o4">ribosomes</string>
    <string name="bio_q6">Nucleus, the genetic material containing rounded body in each cell, was first discovered in 1831 by</string>
    <string name="bio_q7">Other than spreading malaria, anopheles mosquitoes are also vectors of</string>
    <string name="bio_q7_o1">dengue fever</string>
    <string name="bio_q7_o2">filariasis</string>
    <string name="bio_q7_o3">encephalitis</string>
    <string name="bio_q7_o4">yellow fever</string>
    <string name="bio_q8">Myopia is connected with</string>
    <string name="bio_q9">Most abundant tissues of our body are</string>
    <string name="bio_q9_o1">muscular</string>
    <string name="bio_q9_o2">epithelial</string>
    <string name="bio_q9_o3">connective</string>
    <string name="bio_q9_o4">nervous</string>
    <string name="bio_q10">Number of chromosomes in Down\'s syndrome is</string>
    <string name="bio_q10_o1">46</string>
    <string name="bio_q10_o2">47</string>
    <string name="bio_q10_o3">48</string>
    <string name="bio_q10_o4">49</string>
    <string name="how_to">How to?</string>
    <string name="choose_a_category">Choose a category</string>
    <string name="each_category_contains_10_questions">Each category contains 10 questions</string>
    <string name="answer_the_questions">Answer the questions</string>
    <string name="play">Play!</string>
    <string name="physics">Physics</string>
    <string name="chemistry">Chemistry</string>
    <string name="biology">Biology</string>
    <string name="more_topics">More topics coming soon!</string>
    <string name="that_s_it">That\'s it!</string>
</resources>
